; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_extra_field.c__zip_ef_write.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_extra_field.c__zip_ef_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_extra_field = type { i32, i64, i64, i32, %struct.zip_extra_field* }

@ZIP_EF_BOTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_zip_ef_write(%struct.zip_extra_field* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.zip_extra_field*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.zip_extra_field* %0, %struct.zip_extra_field** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  br label %7

7:                                                ; preds = %45, %3
  %8 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %9 = icmp ne %struct.zip_extra_field* %8, null
  br i1 %9, label %10, label %49

10:                                               ; preds = %7
  %11 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %12 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %13, %14
  %16 = load i32, i32* @ZIP_EF_BOTH, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %44

19:                                               ; preds = %10
  %20 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %21 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @_zip_write2(i64 %22, i32* %23)
  %25 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %26 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %25, i32 0, i32 2
  %27 = load i64, i64* %26, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @_zip_write2(i64 %27, i32* %28)
  %30 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %31 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %30, i32 0, i32 2
  %32 = load i64, i64* %31, align 8
  %33 = icmp sgt i64 %32, 0
  br i1 %33, label %34, label %43

34:                                               ; preds = %19
  %35 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %36 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %35, i32 0, i32 3
  %37 = load i32, i32* %36, align 8
  %38 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %39 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %38, i32 0, i32 2
  %40 = load i64, i64* %39, align 8
  %41 = load i32*, i32** %6, align 8
  %42 = call i32 @fwrite(i32 %37, i64 %40, i32 1, i32* %41)
  br label %43

43:                                               ; preds = %34, %19
  br label %44

44:                                               ; preds = %43, %10
  br label %45

45:                                               ; preds = %44
  %46 = load %struct.zip_extra_field*, %struct.zip_extra_field** %4, align 8
  %47 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %46, i32 0, i32 4
  %48 = load %struct.zip_extra_field*, %struct.zip_extra_field** %47, align 8
  store %struct.zip_extra_field* %48, %struct.zip_extra_field** %4, align 8
  br label %7

49:                                               ; preds = %7
  ret void
}

declare dso_local i32 @_zip_write2(i64, i32*) #1

declare dso_local i32 @fwrite(i32, i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
